chap08/spec.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cncamp
spec:
  selector:
    matchLabels:
      app: cncamp
  # Availability
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  minReadySeconds: 10
  # Template Section
  template:
    metadata:
      labels:
        app: cncamp
    spec:
      # Gracefully Stop
      terminationGracePeriodSeconds: 10

      # Containers
      containers:
      - name: cncamp-go-server
        image: puyuyang/golearning:chap08
        ports:
        - containerPort: 8080
        # Probe section
        startupProbe:
          httpGet:
            path: /healthz
            port: 8080
          periodSeconds: 10
          timeoutSeconds: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          periodSeconds: 4
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          periodSeconds: 10
          timeoutSeconds: 1
        # QoS Section
        resources:
          limits:
            cpu: 400m
            memory: 500Mi
          requests:
            cpu: 200m
            memory: 200Mi
        # lifecycle action hooks
        lifecycle:
          preStop:
            exec:
              command: [ "sleep", "5" ]
          postStart:
            exec:
              command: [ '/bin/sh', '-c', 'echo start http server...' ]
        # Config Section
---
apiVersion: v1
kind: Service
metadata:
  name: cncamp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: cncamp
