chap08/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cncamp
  annotations:
    # use cert-manager and let's encrypt to create the ssl instead of manually
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - secretName: cncamp
      hosts:
        - cncamp.com
  rules:
    - host: cncamp.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: cncamp
                port:
                  number: 80
